--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -80,7 +80,7 @@ ul {
 .preview-area {
   position: relative;
   width: 100%;
-  height: 600px;
+  min-height: 450px;
   overflow: hidden;  
 }
 
@@ -96,10 +96,22 @@ ul {
   transform: translate(-50%, -50%);  
 }
 
-#preview {
+#liveview, #liveview2 {
   left: 75%;
 }
-
+/*
+.canvas-wrapper {
+  position: relative;
+}
+.canvas-wrapper canvas {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+*/
 
 /*-- チェックボック自体は非表示 --*/
 .switch_set input {
