--- a/app/views/houses/_select_option.html.erb
+++ b/app/views/houses/_select_option.html.erb
@@ -1,5 +1,6 @@
+<!-- 全景 -->
+<option data-group="overall" value="全景">全景</option>
 <!-- 外部 -->
-<option data-group=""></option>
 <option data-group="outter" value="外部北面">外部北面</option>
 <option data-group="outter" value="外部東面">外部東面</option>
 <option data-group="outter" value="外部南面">外部南面</option>
