--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -192,7 +192,7 @@
     -->
     >> 調査箇所：
     <select name="area1" id="area1">
-      <option data-subgroup=""></option>
+      <option data-subgroup="overall" selected></option>
       <option data-subgroup="outter">外部</option>
       <option data-subgroup="inner">内部</option>
     </select>
