--- a/app/views/investigations/pdf_pre_survey.html.erb
+++ b/app/views/investigations/pdf_pre_survey.html.erb
@@ -2,7 +2,11 @@
   <%= render 'investigations/pages/hyoshi', survey_type: "pre" %>
   <%= render 'investigations/pages/houkoku', survey_type: "pre" %>
   <%= render 'investigations/pages/ichizu', survey_type: "pre" %>
-  <%= render 'investigations/pages/heimenzu1', survey_type: "pre" %>
+  <!-- コメントアウト -->
+  <% if false %>
+    <%= render 'investigations/pages/heimenzu1', survey_type: "pre" %>
+  <% end %>
+  <!-- コメントアウト -->
   <%= render 'investigations/pages/heimenzu2', survey_type: "pre" %>
   <%= render 'investigations/pages/tatemono', survey_type: "pre" %>
   <%= render 'investigations/pages/syodaku', survey_type: "pre" %>
