--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -197,7 +197,7 @@
       <option data-subgroup="inner">内部</option>
     </select>
     <select name="area2" id="area2">
-      <%= render 'houses/select_option' %>
+      <%= render 'houses/select_option_for_sonsyo' %>
     </select>
     <input type="text" name="other" placeholder="その他の内容を記入"></p>
   <% end %>
@@ -260,7 +260,7 @@
       <option data-subgroup="inner">内部</option>
     </select>
     <select name="area4" id="area4">
-      <%= render 'houses/select_option' %>
+      <%= render 'houses/select_option_for_keisya' %>
     </select>
     <input type="text" name="other" placeholder="その他の内容を記入"></p>
   <% end %>
